--- a/pom.xml
+++ b/pom.xml
@@ -210,12 +210,12 @@
     
     <distributionManagement>
     <repository>
-      <id>nexus-releases</id>
+      <id>nexus</id>
       <name>Releases</name>
       <url>http://localhost:9001/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>nexus-snapshots</id>
+      <id>nexus</id>
       <name>Snapshot</name>
       <url>http://localhost:9001/repository/maven-snapshots/</url>
     </snapshotRepository>
