--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 				<artifactId>mule-app-maven-plugin</artifactId>
 				<version>${mule.tools.version}</version>
 				<extensions>true</extensions>
-				<!--<configuration>
+				<configuration>
                     <copyToAppsDirectory>true</copyToAppsDirectory>
-				</configuration>-->
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
