--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
             <version>${munit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    	<groupId>org.mule.tools.maven</groupId>
+    	<artifactId>mule-app-maven-plugin</artifactId>
+    	<version>1.2</version>
+		</dependency>
     </dependencies>
 
 	<repositories>
