--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         </testResources>
     </build>
 
-	<!--
+
 	<!-- Mule Dependencies -->
 	<dependencies>
 		<!-- Xml configuration -->
@@ -188,7 +188,7 @@
 		</dependency>
     </dependencies>
 
-	<repositories>
+	<!--<repositories>
           <repository>
             <id>Central</id>
             <name>Central</name>
@@ -212,9 +212,9 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>-->
     
-    <distributionManagement>
+    <!--<distributionManagement>
     <repository>
       <id>nexus</id>
       <name>Releases</name>
@@ -225,6 +225,6 @@
       <name>Snapshot</name>
       <url>http://localhost:9001/repository/maven-snapshots/</url>
     </snapshotRepository>
-  </distributionManagement>
--->
+  </distributionManagement>-->
+
 </project>
