--- a/pom.xml
+++ b/pom.xml
@@ -214,17 +214,17 @@
         </pluginRepository>
     </pluginRepositories>-->
     
-    <!--<distributionManagement>
+    <distributionManagement>
     <repository>
       <id>nexus</id>
       <name>Releases</name>
-      <url>http://localhost:9001/repository/maven-releases/</url>
+      <url>http://localhost:9001/repository/mule_nexus/</url>
     </repository>
     <snapshotRepository>
       <id>nexus</id>
       <name>Snapshot</name>
-      <url>http://localhost:9001/repository/maven-snapshots/</url>
+      <url>http://localhost:9001/repository/mule_nexus/</url>
     </snapshotRepository>
-  </distributionManagement>-->
+  </distributionManagement>
 
 </project>
