--- a/pom.xml
+++ b/pom.xml
@@ -218,12 +218,12 @@
     <repository>
       <id>nexus-rep</id>
       <name>Releases</name>
-      <url>https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/</url>
+      <url>https://localhost:9001/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
       <id>nexus-rep</id>
       <name>Snapshot</name>
-      <url>https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/</url>
+      <url>https://localhost:9001/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
